--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -10,39 +10,39 @@
         <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 filter_side show-for-small" ng-class="{'show-filter': showFilter}">
           <ul class="nav nav-pills nav-stacked my-verti-tab">
             <li ui-sref-active="active" class="nomargin">
-              <a data-toggle="pill" ui-sref="hm.dashboard.main" ng-click="closeFilter()">
+              <a  ui-sref="hm.dashboard.main" ng-click="closeFilter()">
                 <i class="fa fa-th-large my-verti-icon"></i>
                 <span class="sidebar-heading">Dashboard</span>
               </a>
             </li>
-            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a data-toggle="pill"ui-sref="hm.dashboard.myCatalogue">
+            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a ui-sref="hm.dashboard.myCatalogue">
               <i class="fa fa-heart my-verti-icon catelog-icon"></i>
               <span class="sidebar-heading">My Catalog</span></a>
             </li>
-            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.manageJobSite">
+            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a  ui-sref="hm.dashboard.jobSites">
               <i class="fa fa-map-marker my-verti-icon"></i>
               <span class="sidebar-heading">Manage Job Sites</span></a>
             </li>
-            <!-- <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/manage-my-account">
+            <!-- <li ng-click="closeFilter()"><a  href="/#/manage-my-account">
               <i class="fa fa-user my-verti-icon"></i>
               <span class="sidebar-heading">Manage My Account</span></a>
             </li> -->
-            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.quotaNReservations">
+            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a  ui-sref="hm.dashboard.quotaNReservations">
               <i class="fa fa-bookmark my-verti-icon"></i>
               <span class="sidebar-heading">Quotation</span></a>
             </li>
-            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.makePayment">
+            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a  ui-sref="hm.dashboard.makePayment">
               <i class="fa fa-usd my-verti-icon"></i>
               <span class="sidebar-heading">Make a Payment</span></a>
             </li>
-            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.invoices">
+            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a  ui-sref="hm.dashboard.invoices">
               <i class="fa fa-file my-verti-icon"></i>
               <span class="sidebar-heading">View Invoices</span></a>
             </li>
-            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.requests"><i class="fa fa-comments my-verti-icon"></i>
+            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a  ui-sref="hm.dashboard.requests"><i class="fa fa-comments my-verti-icon"></i>
               <span class="sidebar-heading">Requests</span></a>
             </li>
-            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a data-toggle="pill" ui-sref="hm.dashboard.viewContracts" class="bottomborder"><i class="fa fa-briefcase my-verti-icon"></i>
+            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a  ui-sref="hm.dashboard.viewContracts" class="bottomborder"><i class="fa fa-briefcase my-verti-icon"></i>
               <span class="sidebar-heading">View Contracts</span></a>
             </li>
 
