--- a/src/app/jobsites/edit-jobsite.html
+++ b/src/app/jobsites/edit-jobsite.html
@@ -48,7 +48,9 @@
 </div>
 <div class="row nomargin">
   <div class="col-md-12 site-col">
-    <button class="btn sign_mybtn all-btn primary-btn" ng-click="addJobSite()">Add Job Site</button>
+    <button class="btn sign_mybtn all-btn primary-btn" ng-click="saveJobSite()">
+      <span btn-load-indicator="JobSite:Update:Process">Save</span>
+    </button>
     <button class="btn sell-equ all-btn">Cancel</button>
   </div>
 </div>
