--- a/src/app/cart/cart-update-jobsite.html
+++ b/src/app/cart/cart-update-jobsite.html
@@ -59,7 +59,7 @@
       <!-- update existing job -->
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 update-exist tab-pane fade in active" id="existing-job">
 
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list update-job">
           <div class="form-control search-div">
             <i class="fa fa-search"></i>
             <input type="text" placeholder="Search">
@@ -207,7 +207,7 @@
       </div>
     </div>
 
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot nopadding visible-sm visible-xs devider-bottom"></div>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot nopadding visible-sm visible-xs devider devider-bottom"></div>
 
     <!-- cart summary part -->
     <div class="col-lg-3 col-md-4 col-sm-12 col-xs-12 cart-summary-col">
