--- a/src/app/styles/media.css
+++ b/src/app/styles/media.css
@@ -271,6 +271,11 @@
     padding: 0 15px !important;
   }
 
+  .update-job {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
 }
 
 @media screen and (max-width: 600px) {
