--- a/src/app/cart/cart.html
+++ b/src/app/cart/cart.html
@@ -5,8 +5,11 @@
       <!-- cart -->
       <div ng-show="cart">
         <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 my-bottm-line manage_job_tit manage_job_tit_small shopping-cart-heading">
-            Shopping Cart
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 my-bottm-line manage_job_tit manage_job_tit_small shopping-cart-heading" ng-switch="$state.current.name">
+            <span ng-switch-when="hm.cart.details">Shopping Cart</span>
+            <span ng-switch-when="hm.cart.updateAddress">Select Jobsite and Enter Contact Information</span>
+            <span ng-switch-when="hm.cart.cartDuration">Rental Period</span>
+            <span ng-switch-when="hm.cart.review">Review</span>
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
         </div>
