--- a/src/app/cart/cart-update-jobsite.html
+++ b/src/app/cart/cart-update-jobsite.html
@@ -18,61 +18,26 @@
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list update-job">
         <div class="form-control search-div">
           <i class="fa fa-search"></i>
-          <input type="text" placeholder="Search">
+          <input type="text" placeholder="Search" ng-model="searchJosite">
         </div>
         <div class="job-lists">
-          <div>
-            <input type="radio" name="Site Name" selected>
-            <span>Job site Name</span>
-          </div>
-          <div>
-            <input type="radio" name="Site Name">
-            <span>Job site Name</span>
-          </div>
-          <div>
-            <input type="radio" name="Site Name">
-            <span>Job site Name</span>
-          </div>
-          <div>
-            <input type="radio" name="Site Name">
-            <span>Job site Name</span>
-          </div>
-          <div>
-            <input type="radio" name="Site Name">
-            <span>Job site Name</span>
-          </div>
-          <div>
-            <input type="radio" name="Site Name">
-            <span>Job site Name</span>
-          </div>
-          <div>
-            <input type="radio" name="Site Name">
-            <span>Job site Name</span>
-          </div>
-          <div>
-            <input type="radio" name="Site Name">
-            <span>Job site Name</span>
-          </div>
-          <div>
-            <input type="radio" name="Site Name">
-            <span>Job site Name</span>
-          </div>
-          <div>
-            <input type="radio" name="Site Name">
-            <span>Job site Name</span>
+          <div ng-repeat="site in cartData.jobsites | filter:searchJosite">
+            <input type="radio" name="Site Name" ng-click="selectJobsite(site)" ng-checked="site.SiteID == selectedJobSite.SiteID">
+            <span>{{site.Site_Name}}</span>
           </div>
         </div>
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-detail">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-detail" ng-if="!(selectedJobSite | isEmpty)">
         <h4>Details</h4>
         <i class="fa fa-map-marker marker"></i>
-        <span>DSK Ranwara Constructions</span>
+        <span>{{selectedJobSite.Site_Name}}</span>
         <br>
-        <p>Commercial Area</p>
-        <p>Houstan - TX</p>
-        <p class="zip">Zip Code: 34001</p>
+        <p>{{selectedJobSite.Address1}}</p>
+        <p>{{selectedJobSite.Address2}}</p>
+        <p>{{selectedJobSite.City}}&nbsp;{{selectedJobSite.Prov}}</p>
+        <p class="zip">Zip Code: {{selectedJobSite.Postal}}</p>
         <i class="fa fa-phone-square zip marker"></i>
-        <span class="marker">+1 657 657 5678</span>
+        <span class="marker">{{selectedJobSite.Phone}}</span>
         <br>
         <i class="fa fa-user marker"></i>
   				<span class="marker">
@@ -117,7 +82,7 @@
       <div class="row fields-row">
         <!--<input type="text" id="Autocomplete" ngModel="result1" class="form-control" />-->
         <div class="col-md-12 site-col">
-          <input type="text" placeholder="Job Site Name" class="form-control">
+          <input type="text" placeholder="Job Site Name" class="form-control" ng-model="address.jobsite">
         </div>
         <div class="col-md-12 other-col">
           <input type="text" placeholder="City" class="form-control" ng-model="address.route">
@@ -132,32 +97,32 @@
           <input type="text" placeholder="Zip Code" class="form-control" ng-model="address.postal_code">
         </div>
         <div class="col-md-6 other-col">
-          <input type="text" placeholder="Phone" class="form-control">
+          <input type="text" placeholder="Phone" class="form-control" ng-model="address.phone">
+        </div>
+        <div class="col-md-6 other-col" id="searchbox">
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <ui-gmap-google-map
-            center="map.center"
-            zoom="map.zoom"
-            dragging="map.dragging"
-            bounds="map.bounds"
-            events="map.events"
-            options="map.options"
-            pan="true"
-            control="map.control"
-            >
-            <!--to add as a map control -->
-            <ui-gmap-search-box options="searchbox.options" template="searchbox .html" events="searchbox.events" position="searchbox.position"></ui-gmap-search-box>
-            <ui-gmap-markers idkey="map.idkey" models="map.markers" coords="'self'" icon="'icon'" click="'onClicked'"></ui-gmap-markers>
-            <ui-gmap-window coords="selected" idkey="selected.place_id" templateurl="selected.templateurl" templateparameter="selected.templateparameter" options="selected.options" closeClick='selected.closeClick()' ng-cloak>
-            </ui-gmap-window>
-          </ui-gmap-google-map>
+          <script type="text/ng-template" id="searchbox.tpl.html">
+            <input type="text" class="form-control" placeholder="Search Location"/>
+          </script>
+          <div class="jobsite-lookup" ng-if="showMap" >
+            <ui-gmap-google-map
+              center="map.center"
+              zoom="map.zoom"
+              options="map.options"
+              pan="true"
+              >
+              <ui-gmap-search-box options="searchbox.options" template="'searchbox.tpl.html'" parentdiv="'searchbox'"
+                                  events="searchbox.events" position="'TOP_CENTER'"></ui-gmap-search-box>
+            </ui-gmap-google-map>
+          </div>
         </div>
       </div>
       <div class="row nomargin">
         <div class="col-md-12 site-col">
-          <button class="btn sign_mybtn all-btn primary-btn">Add Job Site</button>
+          <button class="btn sign_mybtn all-btn primary-btn" ng-click="addJobSite()">Add Job Site</button>
         </div>
       </div>
     </div>
