my catelog page ui tweaks add to cart and add to wishlist button allignment all popup buttons to right pay now button on invoice detail page mobile header small, and other ui changes

--- a/src/app/invoice-detail/invoice-detail.html
+++ b/src/app/invoice-detail/invoice-detail.html
@@ -163,8 +163,9 @@
       </div>
     </div>
   </div>
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding"><hr class="bottommargin"></div>
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 reserve-generate-btn">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding"><hr></div>
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 reserve-generate-btn nopadding">
     <button class="btn sign_mybtn all-btn primary-btn"><i class="fa fa-download"></i>&nbsp Download</button>
+    <button class="btn sign_mybtn all-btn primary-btn">Pay Now</button>
   </div>
 </div>
