--- a/src/app/jobsites/edit-jobsite.html
+++ b/src/app/jobsites/edit-jobsite.html
@@ -48,9 +48,9 @@
 </div>
 <div class="row nomargin">
   <div class="col-md-12 site-col">
-    <button class="btn sign_mybtn all-btn primary-btn" ng-click="saveJobSite()">
+    <button class="btn sign_mybtn all-btn primary-btn pull-right" ng-click="saveJobSite()">
       <span btn-load-indicator="JobSite:Update:Process">Save</span>
     </button>
-    <button class="btn sell-equ all-btn">Cancel</button>
+    <button class="btn sell-equ all-btn popup-white-btn" ng-click="$dismiss()">Cancel</button>
   </div>
 </div>
