--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -17,9 +17,9 @@
         <div class="collapse navbar-collapse collapse-for-small landing-collapse-small" id="bs-example-navbar-collapse-1">
           <div class="nav navbar-nav landing-header">
             <div class="equipments-div left-link-div">
-              <span class="glyphicon glyphicon-align-justify"></span>
-              <div class="cd-dropdown-wrapper">
-                    <a class="cd-dropdown-trigger eqe_tex cd-dropdown-trigger-small" menu-aim-dir href="#0">Equipments</a>
+              <span class="glyphicon glyphicon-align-justify hidden-xs"></span>
+              <div class="cd-dropdown-wrapper cd-dropdown-wrapper-small ">
+                    <a class="cd-dropdown-trigger eqe_tex cd-dropdown-trigger-small leftmargin" menu-aim-dir href="#0">Equipments</a>
                     <nav class="cd-dropdown">
                       <h2>Title</h2>
                       <a href="#0" class="cd-close">Close</a>
