--- a/src/app/order-history/order-history.html
+++ b/src/app/order-history/order-history.html
@@ -233,7 +233,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
           </p>
-          <p class="theme_clr desc-text">
+          <p class="theme_clr desc-text on-hover-pointer" ui-sref="hm.faq">
             Go to FAQ’s
           </p>
           <hr class="req_dash_botam order-his-hr">
