--- a/src/app/styles/media.css
+++ b/src/app/styles/media.css
@@ -276,6 +276,23 @@
     padding-right: 0;
   }
 
+  .header-img-small {
+    width: 60px;
+    margin-top: 10px;
+  }
+
+  .header-form-small {
+    margin-top: 5px;
+  }
+
+  /*.content-top {
+    padding-top: 155px !important;
+  }*/
+
+  .cd-dropdown-wrapper-small {
+    height: 30px;
+  }
+
 }
 
 @media screen and (max-width: 600px) {
@@ -748,7 +765,7 @@
   }
 
   .cart_menu .cart_noti {
-    right: 115px;
+    right: 130px;
   }
 
   .user-list-group {
@@ -899,7 +916,7 @@
   }
 
   .catalog-div .lift_box {
-    width: 85%;
+    width: 93%;
     display: inline-block;
     float: none;
   }
