--- a/src/app/update-job-site/update-job-site.html
+++ b/src/app/update-job-site/update-job-site.html
@@ -80,8 +80,8 @@
 			</span>
 		</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 site-btn-div">
-			<button class="btn sign_mybtn all-btn primary-btn">Update</button>
-			<button class="btn sell-equ all-btn" ng-click="$dismiss()">Cancel</button>
+			<button class="btn sign_mybtn all-btn primary-btn pull-right">Update</button>
+			<button class="btn sell-equ all-btn popup-white-btn" ng-click="$dismiss()">Cancel</button>
 		</div>
 	</div>
 
@@ -144,8 +144,8 @@
 		</div>
 		<div class="row nomargin">
 			<div class="col-md-12 site-col">
-				<button class="btn sign_mybtn all-btn primary-btn">Add Job Site</button>
-				<button class="btn sell-equ all-btn" ng-click="$dismiss()">Cancel</button>
+				<button class="btn sign_mybtn all-btn primary-btn pull-right">Add Job Site</button>
+				<button class="btn sell-equ all-btn popup-white-btn" ng-click="$dismiss()">Cancel</button>
 			</div>
 		</div>
 	</div>
