--- a/src/app/styles/media.css
+++ b/src/app/styles/media.css
@@ -764,9 +764,9 @@
     width: 22px;
   }
 
-  .cart_menu .cart_noti {
+  /*.cart_menu .cart_noti {
     right: 115px;
-  }
+  }*/
 
   .user-list-group {
     min-width: 100%;
