--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -43,8 +43,9 @@
             </li>
             <li>
               <a href="#/shopping-cart/details" class="marker">
-                <i class="fa fa-shopping-cart fa-2x marker"></i></a>
-              <span class="cart_noti" ng-if="cartCount">{{cartCount}}</span>
+                <i class="fa fa-shopping-cart fa-2x marker"></i>
+                <span class="cart_noti" ng-if="cartCount">{{cartCount}}</span>
+              </a>
             </li>
           </ul>
         </div>
@@ -118,8 +119,9 @@
             </li>
             <li>
               <a ui-sref="hm.cart.details" class="marker">
-                <i class="fa fa-shopping-cart fa-2x marker"></i></a>
-              <span class="cart_noti" ng-if="cartCount">{{cartCount}}</span>
+                <i class="fa fa-shopping-cart fa-2x marker"></i>
+                <span class="cart_noti" ng-if="cartCount">{{cartCount}}</span>
+              </a>
             </li>
           </ul>
         </div>
