--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -220,19 +220,31 @@ a:focus { color: #0099cc;
 					 vertical-align: top;}
 .cart_menu ul{margin: 0; padding: 0;}
 .cart_menu ul li{display: inline;}
-.cart_menu ul li a{padding: 5px; line-height: 56px;z-index: 1000;}
-.cart_menu .cart_noti{background: #ff5600 none repeat scroll 0 0;
+.cart_menu ul li a{padding: 5px; line-height: 43px;z-index: 1000;}
+.cart_menu .cart_noti{
+	/*background: #ff5600 none repeat scroll 0 0;
 											border-radius: 50px;
 											height: 20px;
 											width: 20px;
 											font-size: 10px;
-											/*left: 23px;*/
+											left: 23px;
 											color: #fff;
 											padding: 2px 5px;
 											position: absolute;
 											text-align: center;
 											top:6px;
-											right: 130px;}
+											right: 130px;*/
+											    background: #ff5600 none repeat scroll 0 0;
+    border-radius: 50px;
+    font-size: 10px;
+    /* left: 23px; */
+    color: #fff;
+    padding: 2px 7px;
+    position: relative;
+    text-align: center;
+    vertical-align: text-bottom;
+    margin-left: -15px;
+}
 .cart_menu .noti{background: #ff5600 none repeat scroll 0 0;
 								 border-radius: 12px; left: 72px;
 								 color: #fff;
